--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --background-image: url("/assets/images/background.jpg");
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,4 +20,9 @@
 body {
   margin: 0;
   padding: 0;
+}
+
+.bg-image {
+  background-image: var(--background-image);
+  background-size: cover;
 }
